MIR-842 fixes spacing, improves colors in cbrowser

--- a/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/mir_browse.scss
+++ b/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/mir_browse.scss
@@ -72,10 +72,11 @@ ul.cbList {
 }
 ul.cbList li {
     margin: 1px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 10px;
     background-color: #e5e5e5;
     border-radius: 1px;
     line-height: 36px;
+    color: #ddd;
 }
 ul.cbList li:first-child {
     border-top-left-radius: 5px;
